# murmur

./: .gitignore  LICENSE  README.md  pyproject.toml
src/murmur/: __init__.py  __main__.py  app.py  audio.py  autostart.py  chunking.py  config.py  doctor.py  formatting.py  hotkey.py  inject.py  macos.py  models.py  overlay.py  server.py  sounds.py  textproc.py  transcribe.py  tray.py  ui.html
tests/: test_autostart.py  test_chunking.py  test_config.py  test_dictionary.py  test_formatting.py  test_hotkey.py  test_inject.py  test_models.py  test_overlay.py  test_sounds.py  test_textproc.py
