[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "murmur-dictation"
version = "0.5.8"
description = "Local push-to-talk dictation for Windows and macOS. Hold a key, talk, release; the words land at your cursor. Runs NVIDIA Parakeet on your machine."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "onnx-asr[cpu,hub]>=0.10,<1",
    "sounddevice>=0.5",
    "soxr>=0.5",
    "pynput>=1.8",
    "pystray>=0.19",
    "pillow>=10",
    "pyperclip>=1.9",
]

[project.scripts]
murmur = "murmur.app:main"

# Windows-only windowless launcher (no console window), so Murmur can run from
# the tray with the terminal closed and start silently at login. Identical to
# `murmur` everywhere else.
[project.gui-scripts]
murmurw = "murmur.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/murmur"]

[dependency-groups]
# Test-only. The suite covers the pure logic (formatting, dictionary, chunking,
# config, sounds) and the recording pill without pulling the heavy audio/ML
# stack, so `numpy` + `pillow` + `pynput` + `pytest` is enough to run it.
dev = ["pytest>=8", "numpy", "pillow>=10", "pynput>=1.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
